# TheMatrixStudio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml
docs/: PHASE0-REQUIREMENTS.md  PHASE0-RESEARCH.md  PHASE1-REQUIREMENTS.md  PHASE1.5-REQUIREMENTS.md  PHASE2A-REQUIREMENTS.md  PHASE2B-REQUIREMENTS.md  PHASE2C-REQUIREMENTS.md  PHASE3-REQUIREMENTS.md  PHASE4-REQUIREMENTS.md  PROJECT-SPEC.md
examples/: coffeeshop.json  debate.json  design-review.json  minimal.json
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/lib/: avatar.ts  (+3 more)
matrix_studio/: __init__.py  __main__.py  analysis.py  avatar.py  branching.py  naming.py  service.py  settings.py  state.py
matrix_studio/api/: __init__.py  app.py  manager.py  server.py
matrix_studio/engine/: __init__.py  simulator.py
matrix_studio/storage/: __init__.py  database.py
scripts/: import_thematrix_run.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_api_phase15.py  test_api_phase2a.py  test_api_phase2b.py  test_api_phase2c.py  test_avatar.py  test_avatar_style.py  test_cognition.py  test_cost_cap.py  test_engine.py  test_engine_phase2a.py  test_engine_seam.py  test_examples.py  test_model_selection.py  test_naming.py  test_resume.py  test_secret_safety.py  test_settings.py  test_startup_sweep.py  test_state.py  test_storage.py  test_storage_phase1.py  test_storage_phase15.py  test_storage_phase2a.py
(+21 files in other folders)
